--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="form">
 			<form action="#" method="get">
 				<fieldset>
-					<legend>Заполните форму прямо сейчас!</legend>
+					<legend>Поiхали прямо сейчас!</legend>
 				<label>Ваше имя: <input type="text" name="name" placeholder="Влас" required></label><br>
 				<label>Ваша почта: <input type="email" size="25" name="email" placeholder="da.perchemidi@phystech.edu" required></label><br>
 				<label>Ваш номер телефона: <input type="tel" name="number" placeholder="8 (800) 555-35-35" required></label><br>
