--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 	<div class="map"></div>
 </main>
 <footer>
-	<div class="logo"></div>
-	<div class="bonk"></div>
+	<div class="logo"><img src="img/logo.png"></div>
+	<div class="bonk"><img src="img/bonk.png"></div>
 	<div class="social">
 		<div class="wrapper">
 		<a href="https://www.instagram.com/pornhub/"><img width="37" src="img/Inst.png"></a>
