--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header class="main-header">
 	<div class="logo">
-		<img src="img/logo.png">
+		<img src="img/logo2.png">
 	</div>
 	<div class="navigation">
 		<div><a href="tel:88005553535">8 (800) 555-35-35</a></div>
@@ -50,7 +50,7 @@
 	<div class="map"></div>
 </main>
 <footer>
-	<div class="logo"><img src="img/logo.png"></div>
+	<div class="logo"><img src="img/logo2.png"></div>
 	<div class="bonk"><img src="img/bonk.png"></div>
 	<div class="social">
 		<div class="wrapper">
