Постарался все поправить

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </header>
 <main>
 	<div class="action">
+		<div class="woman"><img src="img/woman.png"></div>
 		<div class="timer">
 			<div class="wrapper">
 			<h1 id="under-timer">До конца акции осталось</h1>
@@ -38,7 +39,7 @@
 				<label>Ваша почта: <input type="email" size="25" name="email" placeholder="da.perchemidi@phystech.edu" required></label><br>
 				<label>Ваш номер телефона: <input type="tel" name="number" placeholder="8 (800) 555-35-35" required></label><br>
 				<label for="textarea">Комментарий: </label><br>
-				<textarea id="textarea" rows="3" cols="20">Админ пидор</textarea>
+				<textarea id="textarea" rows="3" cols="20">Админ пидор</textarea><br>
 				<input type="reset" name="Сбросить">
 				<input type="submit" name="Отправить">
 				</fieldset>
