--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </header>
 <main>
 	<div class="action">
-		<div class="woman"><img src="img/woman.png"></div>
+		<div class="woman"><div class="relative"><img src="img/woman.png"></div></div>
 		<div class="timer">
 			<div class="wrapper">
 			<h1 id="under-timer">До конца акции осталось</h1>
@@ -34,10 +34,10 @@
 		<div class="form">
 			<form action="#" method="get">
 				<fieldset>
-					<legend>Заполните форму прямо сейчас!</legend>
+					<legend>Поiхали прямо сейчас!</legend>
 				<label>Ваше имя: <input type="text" name="name" placeholder="Влас" required></label><br>
 				<label>Ваша почта: <input type="email" size="25" name="email" placeholder="da.perchemidi@phystech.edu" required></label><br>
-				<label>Ваш номер телефона: <input type="tel" name="number" placeholder="8 (800) 555-35-35" required></label><br>
+				<label>Ваш номер телефона: <input type="tel" name="number" placeholder="8 (800) 555-35-35" required></label><br><br>
 				<label for="textarea">Комментарий: </label><br>
 				<textarea id="textarea" rows="3" cols="20">Админ пидор</textarea><br>
 				<input type="reset" name="Сбросить">
@@ -51,8 +51,8 @@
 	<div class="map"></div>
 </main>
 <footer>
-	<div class="logo"><img src="img/logo2.png"></div>
-	<div class="bonk"><img src="img/bonk.png"></div>
+	<div class="logo"><div class="relative"><img src="img/logo2.png"></div></div>
+	<div class="bonk"><div class="relative"><img src="img/bonk4.png"></div></div>
 	<div class="social">
 		<div class="wrapper">
 		<a href="https://www.instagram.com/pornhub/"><img width="37" src="img/Inst.png"></a>
