--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
 </head>
 <body>
 <header class="main-header">
-	<div class="logo">
-		<img src="img/logo2.png">
-	</div>
+	<div class="logo"><div class="relative"><img src="img/logo.png"></div></div>
 	<div class="navigation">
 		<div><a href="tel:88005553535">8 (800) 555-35-35</a></div>
 		<div>Do not call on Whats'App or Viber</div>
 	</div>
-	<div class="menu"></div>
+	<div class="menu">
+		<div class="wrapper"><ul>
+			<li><a href="index.html">Главная</a></li>
+			<li><a href="#actions">Акция</a></li>
+			<li><a href="#reasons">Преимущества</a></li>
+			<li><a href="#map">Контакты</a></li>
+		</ul>
+		</div>
+	</div>
 </header>
 <main>
-	<div class="action">
+	<div class="action" id="actions">
 		<div class="woman"><div class="relative"><img src="img/woman.png"></div></div>
 		<div class="timer">
 			<div class="wrapper">
@@ -47,12 +53,12 @@
 		</div>
 
 	</div>
-	<div class="reasons"></div>
-	<div class="map"></div>
+	<div class="reasons" id="reasons"></div>
+	<div class="map" id="map"></div>
 </main>
 <footer>
-	<div class="logo"><div class="relative"><img src="img/logo2.png"></div></div>
-	<div class="bonk"><div class="relative"><img src="img/bonk4.png"></div></div>
+	<div class="logo"><div class="relative"><img src="img/logo.png"></div></div>
+	<div class="bonk"><div class="relative"><img src="img/bonk.png"></div></div>
 	<div class="social">
 		<div class="wrapper">
 		<a href="https://www.instagram.com/pornhub/"><img width="37" src="img/Inst.png"></a>
