--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 		<div class="form">
 			<form action="#" method="get">
 				<fieldset>
-					<legend>Поiхали прямо сейчас!</legend>
+					<legend>Записывайтесь прямо сейчас!</legend>
 				<label>Ваше имя: <input type="text" name="name" placeholder="Влас" required></label><br>
 				<label>Ваша почта: <input type="email" size="25" name="email" placeholder="da.perchemidi@phystech.edu" required></label><br>
 				<label>Ваш номер телефона: <input type="tel" name="number" placeholder="8 (800) 555-35-35" required></label><br><br>
 				<label for="textarea">Комментарий: </label><br>
-				<textarea id="textarea" rows="3" cols="20">Админ пидор</textarea><br>
+				<textarea id="textarea" rows="3" cols="20">Перезвоните мне!</textarea><br>
 				<input type="reset" name="Сбросить">
 				<input type="submit" name="Отправить">
 				</fieldset>
@@ -53,7 +53,17 @@
 		</div>
 
 	</div>
-	<div class="reasons" id="reasons"></div>
+	<div class="reasons" id="reasons">
+		<h2>Почему наши курсы востребованы</h2>
+		<div class="icons">
+			<div class="icon1"><div><p>Дружное сообщество</p></div></div>
+			<div class="icon2"><div><p>Скидки на обучение</p></div></div>
+			<div class="icon3"><div><p>Конспекты занятий</p></div></div>
+			<div class="icon4"><div><p>Гибкий график</p></div></div>
+			<div class="icon5"><div><p>Множество отзывов</p></div></div>
+			<div class="icon6"><div><p>Преподаватели топ-вузов</p></div></div>
+		</div>
+	</div>
 	<div class="map" id="map"></div>
 </main>
 <footer>
