--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<li><a href="index.html">Главная</a></li>
 			<li><a href="#actions">Акция</a></li>
 			<li><a href="#reasons">Преимущества</a></li>
-			<li><a href="#map">Контакты</a></li>
+			<li><a href="#map">Местоположение</a></li>
 		</ul>
 		</div>
 	</div>
@@ -64,7 +64,28 @@
 			<div class="icon6"><div><p>Преподаватели топ-вузов</p></div></div>
 		</div>
 	</div>
-	<div class="map" id="map"></div>
+	<div class="map" id="map">
+		<div>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2235.133284933183!2d37.5177547161402!3d55.92972728579961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b539810371f855%3A0x467d585fd0176375!2z0JzQvtGB0LrQvtCy0YHQutC40Lkg0YTQuNC30LjQutC-LdGC0LXRhdC90LjRh9C10YHQutC40Lkg0LjQvdGB0YLQuNGC0YPRgg!5e0!3m2!1sru!2sru!4v1597702941135!5m2!1sru!2sru" width="100%" height=100% frameborder="0" style="border: 2px solid rgba(54, 71, 78, 01);" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+		</div>	
+		<div>
+			<div class="wrapper">
+				<div>
+					<p>Замечательный институт! Очень нравится подача преподавателей. Скорее хочу стать их студентом!</p>
+					<cite>Олег Прокопов. Ученик 10 класса</cite>				
+				</div>
+				<div><p>Учиться здесь тяжело, но осознание того, что учишься среди лучших, заставляет продолжать работать.</p>
+					<cite>Даниил Виллин. Студент 1 курса</cite>		
+				</div>
+				<div><p>Никогда не видела плохого отношения со стороны преподавателей. Это, мне кажется, большой плюс.</p>
+					<cite>Евгения Тодорец. Студентка 2 курса</cite>		
+				</div>
+				<div><p>Советую перед началом курсов немного вникнуть в теорию программирования. А то тяжело...</p>
+					<cite>Максим Песов. Ученик 9 класса</cite>		
+				</div>
+			</div>
+		</div>
+	</div>
 </main>
 <footer>
 	<div class="logo"><div class="relative"><img src="img/logo.png"></div></div>
