--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<div class="icon3"><div><p>Конспекты занятий</p></div></div>
 			<div class="icon4"><div><p>Гибкий график</p></div></div>
 			<div class="icon5"><div><p>Множество отзывов</p></div></div>
-			<div class="icon6"><div><p>Преподаватели топ-вузов</p></div></div>
+			<div class="icon6"><div><p>Известные учителя</p></div></div>
 		</div>
 	</div>
 	<div class="map" id="map">
